Fix uneven size of profile pic

--- a/public/css/side-nav.css
+++ b/public/css/side-nav.css
@@ -47,7 +47,7 @@ a {
 }
 
 #side-nav-profile {
-    width: 1.5rem;
+    width: 1.85rem;
     height: 1.5rem;
     border-radius: 100%;
 }
